--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,10 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.android.support:appcompat-v7:+'
 }
